log.txt
   Compiling hangups v0.0.1 (file:///source)
error: no method named `deconstruct` found for type `hyper::client::FutureResponse` in the current scope
   --> src/lib.rs:235:46
    |
235 |         let (_, uri, _, headers, body) = req.deconstruct();
    |                                              ^^^^^^^^^^^

error[E0277]: the trait bound `str: std::marker::Sized` is not satisfied
   --> src/lib.rs:235:34
    |
235 |         let (_, uri, _, headers, body) = req.deconstruct();
    |                                  ^^^^ the trait `std::marker::Sized` is not implemented for `str`
    |
    = note: `str` does not have a constant size known at compile-time
    = note: all local variables must have a statically known size

error: aborting due to 2 previous errors

error: Could not compile `hangups`.

To learn more, run the command again with --verbose.
